[#38]bug: bottom on mobile

--- a/weatherApp/src/pages/Favorites/Favorites.css
+++ b/weatherApp/src/pages/Favorites/Favorites.css
@@ -1,5 +1,5 @@
 .favorite {
-  height: 88vh;
+  height: 85vh;
   display: flex;
   flex-direction: column;
   padding-top: 6rem;
