--- a/weatherApp/src/pages/Home/Home.css
+++ b/weatherApp/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 .home {
-  height: 88vh;
+  height: 85vh;
   display: flex;
   flex-direction: column;
   width: 60%;
